--- a/.env
+++ b/.env
@@ -6,19 +6,19 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
-#DB_CONNECTION=mysql
-#DB_HOST=127.0.0.1
-#DB_PORT=3306
-#DB_DATABASE=pretty
-#DB_USERNAME=root
-#DB_PASSWORD=
-
 DB_CONNECTION=mysql
-DB_HOST=sql5.freemysqlhosting.net
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=sql5450538
-DB_USERNAME=sql5450538
-DB_PASSWORD=kBmcxp5H55
+DB_DATABASE=pretty
+DB_USERNAME=root
+DB_PASSWORD=
+
+#DB_CONNECTION=mysql
+#DB_HOST=sql5.freemysqlhosting.net
+#DB_PORT=3306
+#DB_DATABASE=sql5450538
+#DB_USERNAME=sql5450538
+#DB_PASSWORD=kBmcxp5H55
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
